# kctsb

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakeLists.txt.v3.bak  COMPILATION_FIXES_SUMMARY.md  README.md  benchmark_full.txt  build_err.txt  build_out.txt  build_output.txt  check_n0.py  compile_commands.json  configure_output.txt  temp_verify.py  test_bytes.cpp  test_crt_debug.cpp  test_detail.xml  test_output.txt  verify_mont.py
.github/: copilot-instructions.md
.github/instructions/: systemopt.instructions.md
.github/workflows/: benchmark-ci.yml  ci.yml
DerivedData/ModuleCache.noindex/: Session.modulevalidation
DerivedData/kcalg/: FindNavigator.history  info.plist
benchmarks/: AGENTS.md  CMakeLists.txt  baseline_data.hpp  benchmark_aes_gcm.cpp  benchmark_bfv.cpp  benchmark_bgv.cpp  benchmark_chacha20.cpp  benchmark_ckks.cpp  benchmark_common.hpp  benchmark_cuda.cpp  benchmark_cuda_ntt.cpp  benchmark_ecc.cpp  benchmark_gmssl.cpp  benchmark_hash.cpp  benchmark_mac.cpp  benchmark_main.cpp  benchmark_openssl.cpp  benchmark_psi_pir.cpp  benchmark_rsa.cpp  benchmark_seal.cpp  benchmark_sm.cpp
benchmarks/advanced/: bench_psi_pir.cpp
build-cuda/: .ninja_deps  .ninja_log  build.ninja  test_simple.cu
build-release/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  compile_commands.json
build-release-hash/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
build-release/benchmarks/: CTestTestfile.cmake
build-release/tests/: CTestTestfile.cmake  cmake_test_discovery_089ab2bf5c.json  cmake_test_discovery_0d83970b94.json  cmake_test_discovery_5164ca93e2.json  cmake_test_discovery_523438ed30.json  cmake_test_discovery_58bc0cce97.json  cmake_test_discovery_5d1caeceff.json  cmake_test_discovery_6b70a820eb.json  cmake_test_discovery_a2b2b2dabe.json  cmake_test_discovery_d012ae1bab.json  cmake_test_discovery_e3a671be55.json  test_aes[1]_include.cmake  test_aes[1]_tests.cmake  test_benchmark[1]_include.cmake  test_benchmark[1]_tests.cmake  test_hash[1]_include.cmake  test_hash[1]_tests.cmake  test_integration[1]_tests.cmake  (+13 more)
cmake/: FindGMP.cmake  FindNTL.cmake  kctsbConfig.cmake.in
docker/: Dockerfile.almalinux9  Dockerfile.centos7  Dockerfile.v4-linux
docs/: BFV-comprehensive-research-report.md  BGV-comprehensive-research-report.md  CKKS-comprehensive-research-report.md  FHE_PERFORMANCE.md  OPENSSL_PERFORMANCE.md  PERFORMANCE_BASELINE.md  PSI_PIR_PERFORMANCE.md  benchmark_v4.0.1_raw.txt  bignum-refactoring-plan.md  ci_cd_and_performance_gateway.md  cli_design.md  homomorphic-encryption-roadmap.md  ntl-source-analysis.md  progress_report_20260112.md  third-party-dependencies.md  v3.4.0-refactoring-plan.md
examples/: CMakeLists.txt  PrivateSetInter.py  SecureComputationDemo.py  psi_demo.py  psi_pir_demo.cpp
examples/advanced/: sss_example.cpp  whitebox_example.cpp
examples/basic/: aes_example.cpp  ecc_example.cpp  hash_example.cpp  rsa_example.cpp  sm_example.cpp
examples/demo/: main.cpp
include/: kctsb_api.h
kcalg/: aesTable.h  crt.txt  gcd.txt  main.cpp  poly.txt  vinginiaCipher.txt  vinginiaCipherToPlain.txt  vinginiaPlain.txt
kcalg.xcodeproj/: project.pbxproj
release/: RELEASE_INFO.txt
scripts/: build.ps1  build.sh  build_apsi.ps1  build_fe256_native.ps1  build_flatbuffers.ps1  build_gmp.ps1  build_helib.ps1  build_kuku.ps1  build_kuku.sh  build_ntl.ps1  build_ntl_bundled.ps1  build_ntl_bundled.sh  build_seal_mingw.ps1  build_thirdparty_linux.sh  check_performance.py  compile_ntl.cmd  compile_ntl_full.ps1  compile_ntl_optimized.ps1  compile_ntl_optimized.sh  docker_build.ps1  docker_build.sh  install_msys2.cmd  install_msys2_auto.ps1  install_msys2_guide.md  migrate_ntl.py  package_macos_release.sh  verify_p256_reduction.py
src/advanced/cuda/: CMakeLists.txt  benchmark_cuda_fhe.cu  cuda_api.h  cuda_fhe_kernels.cu  cuda_ntt_kernels.cu  cuda_pir_kernels.cu  cuda_utils.cu  test_cuda_ntt.cu  test_cuda_runtime.cu
src/advanced/psi/cuda/: CMakeLists.txt  MIGRATION.md  benchmark_ntt_final.cu  benchmark_ntt_gpu.cu  benchmark_ntt_optimized.cu  pir_cuda_kernels.cu  test_cuda_runtime.cu  test_modular_ops.cu
src/cli/: CMakeLists.txt  cli_utils.h  cmd_aes.cpp  cmd_benchmark.cpp  cmd_chacha20.cpp  cmd_ecc.cpp  cmd_hash.cpp  cmd_rsa.cpp  kctsb_main.cpp
temp_restore/: fe256.cpp  fe256.h  fe256_ecc_fast.h  fe256_p256.cpp  fe256_point.cpp  fe256_point.h  test_fe256_point.cpp
tests/: CMakeLists.txt  debug_compare.cpp  debug_exact.cpp  debug_full_roundtrip.cpp  debug_mont.cpp  debug_mont2.cpp  debug_mont3.cpp  debug_mont_gx.cpp  debug_mont_roundtrip.cpp  debug_mul_wide.cpp  debug_ntl_bytes.cpp  test_bgv.cpp  test_bgv_evaluator.cpp  test_bgv_evaluator_v2.cpp  test_core.cpp  test_fe256_point.cpp  test_ntt_harvey.cpp  test_unified_api.c  test_v5_core.cpp
tests/advanced/fe/bfv/: test_behz_bfv_integration.cpp  test_bfv_evaluator.cpp
tests/advanced/fe/bgv/: test_bgv_relin_debug.cpp  test_multiply_isolated.cpp
tests/advanced/fe/ckks/: test_ckks_evaluator.cpp
tests/advanced/fe/common/: test_behz_rns_tool.cpp
tests/benchmark/: AGENTS.md  CMakeLists.txt  test_benchmark.cpp  test_bfv_benchmark.cpp  test_bgv_benchmark.cpp  test_ckks_benchmark.cpp  test_rsa_quick.cpp
tests/crypto/: test_rsa_modular.cpp
tests/integration/: test_integration.cpp
tests/unit/advanced/: test_psi_pir.cpp
tests/unit/advanced/fhe/bgv/: test_bgv.cpp  test_multiply_isolated.cpp
tests/unit/advanced/fhe/common/: test_ntt.cpp  test_ntt_poly_ops.cpp  test_rns.cpp
tests/unit/crypto/: AGENTS.md  test_aes.cpp  test_chacha20_poly1305.cpp  test_ecc.cpp  test_ecc_debug.cpp  test_fe256_debug.cpp  test_hash.cpp  test_mac.cpp  test_pqc.cpp  test_random.cpp  test_rsa.cpp  test_sha.cpp  test_simd.cpp  test_simd_hash.cpp  test_sm.cpp  test_sm2_mont_debug.cpp  test_zkp.cpp
tests/unit/fhe/: test_bfv.cpp  test_bgv.cpp  test_bgv_evaluator.cpp  test_ckks.cpp  test_ntt.cpp  test_ntt_large_prime.cpp  test_ntt_poly_ops.cpp  test_rns.cpp
tests/unit/math/: test_math.cpp
tests/unit/security/: test_security_boundaries.cpp
(+843 files in other folders)
